--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ faiss-cpu>=1.7.0
 google-genai>=0.3.0
 python-dotenv>=1.0.0
 pyyaml>=6.0
-pathlib2>=2.3.0 
+pathlib2>=2.3.0
+flask>=2.3.0
+requests>=2.31.0 
