pushing from agentic radar

--- a/.gitignore
+++ b/.gitignore
@@ -69,4 +69,16 @@ htmlcov/
 coverage.xml
 *.cover
 .hypothesis/
-.pytest_cache/ 
+.pytest_cache/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# Vite
+dist/
+.vite/ 
